--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="labels">
             <label id="gender-label" for="gender">Gender</label>   
         </div>
-        <div class="right">
+        <div class="right stack">
             <label><input id="gender" value="male" type="radio" name="gender"><i class="fa fa-circle-o fa-2x"></i><i class="fa fa-dot-circle-o fa-2x"></i> Male</label>&nbsp&nbsp
             <label><input id="gender" value="female" type="radio" name="gender"><i class="fa fa-circle-o fa-2x"></i><i class="fa fa-dot-circle-o fa-2x"></i> Female</label>&nbsp&nbsp
             <label><input id="gender" value="other" type="radio" name="gender"><i class="fa fa-circle-o fa-2x"></i><i class="fa fa-dot-circle-o fa-2x"></i> Other</label>
@@ -73,7 +73,7 @@
         <div class="labels">
             <label id="packets-label" for="packets">Which package do you prefer?</label>   
         </div>
-        <div class="right">
+        <div class="right stack">
             <label><input id="morning" value="morning" type="radio" name="packets"><i class="fa fa-circle-o fa-2x"></i><i class="fa fa-dot-circle-o fa-2x"></i> Morning</label>&nbsp&nbsp
             <label><input id="afternoon" value="afternoon" type="radio"  name="packets"><i class="fa fa-circle-o fa-2x"></i><i class="fa fa-dot-circle-o fa-2x"></i> Afternoon</label>&nbsp&nbsp
             <label><input id="fullday" value="fullday" type="radio" name="packets"><i class="fa fa-circle-o fa-2x"></i><i class="fa fa-dot-circle-o fa-2x"></i> Full Day</label>
